@@ -1,3 +1,7 @@
+2012-08-20  Philipp Kroos  <philipp.kroos@t-online.de>
+
+	* contrib/toolbar.lisp: Add an expose-mode-button-module.
+
 2012-08-19  Philippe Brochard  <pbrochard@common-lisp.net>
 
 	* contrib/toolbar.lisp (remove-toolbar): New function.
